--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1{
     align-items: center;
     align-content: center;
     gap: 30px;
-    padding: 10% 5% 10% 5%;
+    padding: 10% 5%;
     width: 80%;
     margin-top: 10%;
     
@@ -181,7 +181,7 @@ footer a:hover{
     color: #313878;
 }
 /******Media Query-Responsiveness******/
-@media screen and (max-width: 750px) {
+@media (max-width: 750px) {
     /***Main Section***/
     .main-section{
     background-image: url(./images/MainSection-SmallBg.png);
